# ChangeLog for net-fs/samba
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.28 2003/02/23 17:45:05 woodchip Exp $

*samba-3.0_alpha21 (22 Feb 2003)

  22 Feb 2003; Donny Davies <woodchip@gentoo.org> :  Initial import.
  Added to package.mask for now.

*samba-2.2.8_pre1 (22 Feb 2003)

  22 Feb 2003; Donny Davies <woodchip@gentoo.org> : This _pre update fixes
  about 30 bugs; see WHATSNEW.txt.  Updated to samba-vscan-0.3.2.  Install
  libsmbclient.h #15357.  Added --with-winbind-auth-challenge #15748.  Add
  --with-winbind-ldap-hack if USE=ldap.  Re-org some stuff.

  27 Jan 2003; Donny Davies <woodchip@gentoo.org> : #14644 adds reload().

*samba-2.2.7a (16 Dec 2002)

  16 Dec 2002; Donny Davies <woodchip@gentoo.org> : Update to latest,
  fixes large file copying bug, among others.  Changed the 'vscan'
  USE flag to 'oav'.  Added description for that to use.desc.

*samba-2.2.7 (20 Nov 2002)

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org> samba-2.2.7.ebuild :
  Add alpha to KEYWORDS

  07 Dec 2002; Jack Morgan <jmorgan@gentoo.org> samba-2.2.5-r1.ebuild, 
  samba-2.2.6-r2.ebuild, samba-2.2.7.ebuild :
  Changed sparc64 to sparc keyword samba-2.2.5-r1.ebuild
  Changed ~sparc64 to ~sparc keyword samba-2.2.6-r2.ebuild, samba-2.2.7.ebuild

  20 Nov 2002; Donny Davies <woodchip@gentoo.org> : Chase latest.  This release
  fixes a security problem.  --with-lockdir is changed to /var/cache/samba;
  thanks Achim for #10819.  Marked as latest stable.  Fix problem with USE=ldap
  and export VISUAL.

*samba-2.2.6-r2 (07 Nov 2002)

  07 Nov 2002; Donny Davies <woodchip@gentoo.org> : Added patch to fix fd leak.
  Made pam support optional.  Added --with-sendfile-support.  Fixup digest (vscan).
  Fix for #9249.

*samba-2.2.6-r1 (26 Oct 2002)

  26 Oct 2002; Jon Nall <nall@gentoo.org> : samba expects ldap to depend on sasl