@@ -1,0 +1,4 @@
+MD5 a1399b9e297f51bd18cb21339a3f8f67 samba-vscan-0.3.2.tar.bz2 68127
+MD5 8db28b53c27f8cbd564382d2f5f1787c samba-2.2.7a.tar.bz2 4370869
+MD5 1b1c58ed1961a9e49ecdd7caba7bd9b7 patch-2.2.7a-2.2.8pre1.diffs.gz 80462
+MD5 fc965b76990d5c8997decf0fb7e70d78 patch-2.2.8pre1-2.2.8pre2.diffs.gz 55429
