@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/samba
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.28 2003/02/23 17:45:05 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.29 2003/03/01 06:17:18 woodchip Exp $
+
+*samba-2.2.8_pre2 (01 Mar 2003)
+
+  01 Mar 2003; Donny Davies <woodchip@gentoo.org> : About another 30 bugs
+  fixed in this _pre update.  Quell smbwrapper/smbsh.
 
 *samba-3.0_alpha21 (22 Feb 2003)
 
